--- a/JavaPlaygournd/pom.xml
+++ b/JavaPlaygournd/pom.xml
@@ -192,7 +192,11 @@
             <artifactId>json-path</artifactId>
             <version>2.2.0</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.3.0</version>
+        </dependency>    </dependencies>
 
     <reporting>
         <plugins>
