--- a/JavaPlaygournd/pom.xml
+++ b/JavaPlaygournd/pom.xml
@@ -206,7 +206,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.22.0</version>
                 <configuration>
                     <showSuccess>true</showSuccess>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
@@ -229,7 +229,7 @@
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
-                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <!--<argLine>-Dfile.encoding=UTF-8</argLine> -->
                     <!-- <argLine>-Xmx5120m</argLine> -->
                     <encoding>UTF-8</encoding>
                 </configuration>
@@ -253,7 +253,7 @@
                     -->
                     <argLine>-Dfile.encoding=UTF-8</argLine>
                     <!-- <argLine>-Xmx5120m</argLine> -->
-                    <encoding>UTF-8</encoding>
+
                 </configuration>
 
                 <!-- -->
